# banboo-develop

./: .gitignore  ARCHITECTURE_REDESIGN.md  CMakeLists.txt  CMakeLists_integrated.txt  DEB_BUILD_GUIDE.md  DEPLOYMENT_VERIFICATION.md  EGL_FIX_USAGE_GUIDE.md  FINAL_INTEGRATION_SUMMARY.md  INSTALL.md  JETPACK_DEPLOYMENT_FIX.md  JETPACK_UPGRADE_GUIDE.md  JETSON_NANO_EGL_FIX_GUIDE.md  JETSON_ORIN_NX_FIX_DEPLOYMENT.md  Makefile  NOTES.md  PLC.md  README.md  README_CPP_FLUTTER.md  REDEPLOY_GUIDE.md  RUNNING.md  STABLE_SYSTEM_INTEGRATION.md  bamboo-python-gtk4.service  bamboo-python-lvgl.service  bamboo.html  bamboo_vision.py  build_all.ps1  build_all.sh  build_deb.py  build_integrated_system.sh  check_gstreamer_plugins.sh  complete_redeploy.sh  create_missing_files.sh  csi_camera_setup.sh  debug_frontend_video.sh  debug_gtk4.sh  demo_ai_vision.py  deploy.sh  dev_requirements.txt  fix_deployed_trtexec.sh  fix_egl_display_issues.sh  (+29 more)
cpp_backend/: .gitignore  CMakeLists.txt  README.md  bamboo_system.cpp  build.sh  simple_build.sh
cpp_backend/examples/: modbus_server_example.cpp
cpp_backend/include/bamboo_cut/: config.h.in
cpp_backend/include/bamboo_cut/communication/: modbus_interface.h  modbus_server.h  tcp_socket_server.h  unix_socket_server.h
cpp_backend/include/bamboo_cut/core/: bamboo_system.h  data_bridge.h  logger.h  system_utils.h  types.h
cpp_backend/include/bamboo_cut/deepstream/: deepstream_manager.h
cpp_backend/include/bamboo_cut/drm/: drm_diagnostics.h  drm_resource_coordinator.h
cpp_backend/include/bamboo_cut/inference/: bamboo_detector.h  ghost_conv.h  sahi_inference.h  vov_gscsp.h
cpp_backend/include/bamboo_cut/ui/: display_backend.h  egl_context_manager.h  gbm_display_backend.h  ui_context.h  (+9 more)
cpp_backend/include/wayland-protocols/: xdg-shell-client-protocol.h
cpp_backend/src/: main.cpp
cpp_backend/src/communication/: modbus_interface.cpp  modbus_server.cpp  tcp_socket_server.cpp  unix_socket_server.cpp
cpp_backend/src/core/: bamboo_system.cpp  data_bridge.cpp  logger.cpp  system_utils.cpp
cpp_backend/src/deepstream/: deepstream_manager.cpp  deepstream_wayland_manager.cpp  nvdsinfer_yolo_bamboo.cpp
cpp_backend/src/drm/: drm_diagnostics.cpp  drm_resource_coordinator.cpp
cpp_backend/src/ffi/: flutter_interface.cpp
cpp_backend/src/inference/: bamboo_detector.cpp  ghost_conv.cpp
cpp_backend/src/ui/: display_backend.cpp  drm_render_test.cpp  egl_context_manager.cpp  gbm_display_backend.cpp  graphics_benchmark.cpp  lvgl_display_drm.cpp  lvgl_drm_interface.cpp  lvgl_events.cpp  lvgl_interface.cpp  lvgl_panel_styles.cpp  lvgl_ui_utils.cpp  lvgl_updates.cpp  lvgl_wayland_backend.cpp  lvgl_wayland_interface.cpp  nvdrmvideosink_test.cpp  touch_test.cpp  ui_components.cpp  ui_updaters.cpp  wayland_compositor.cpp  xvfb_manager.cpp
cpp_backend/src/utils/: camera_diagnostics.cpp  config_loader.cpp  jetson_monitor.cpp  logger.cpp  system_monitor.cpp
cpp_backend/src/vision/: camera_manager.cpp  deepstream_pipeline.cpp  detector.cpp  ghost_conv.cpp  hardware_accelerated_camera.cpp  nam_attention.cpp  optimized_detector.cpp  sahi_slicing.cpp  shared_memory_manager.cpp  stereo_vision.cpp  tensorrt_engine.cpp  vov_gscsp.cpp  wise_iou.cpp
cpp_backend/src/wayland-protocols/: xdg-shell-protocol.c
cpp_backend/tests/: CMakeLists.txt  test_modbus_server.cpp
cpp_backend/tools/: stereo_calibration_tool.cpp
cpp_inference/: CMakeLists.txt  inference_core.cpp  inference_core.h  python_bindings.cpp  utils.cpp
lvgl_frontend/: CMakeLists.txt  README.md  bamboo.html  lv_conf.h  update_fonts.py
lvgl_frontend/include/ai/: detection_processor.h  tensorrt_engine.h  yolo_detector.h
lvgl_frontend/include/app/: config_manager.h  event_manager.h  main_app.h
lvgl_frontend/include/backend/: backend_client.h  tcp_socket_client.h  unix_socket_client.h
lvgl_frontend/include/camera/: camera_manager.h  cuda_processor.h  gstreamer_receiver.h  shared_memory_reader.h  v4l2_camera.h
lvgl_frontend/include/common/: types.h  utils.h
lvgl_frontend/include/display/: framebuffer_driver.h  gpu_accelerated.h  lvgl_display.h
lvgl_frontend/include/gui/: control_panel.h  settings_page.h  status_bar.h  video_view.h
lvgl_frontend/include/input/: input_calibration.h  touch_driver.h
lvgl_frontend/include/system/: lv_port_tick.h
lvgl_frontend/resources/config/: default_config.json  touch_config.json
lvgl_frontend/resources/fonts/: generate_chinese_font.py  generate_minimal_chinese_font.py  lv_font_awesome_16.c  lv_font_awesome_16.h  lv_font_noto_sans_cjk.h  lv_font_noto_sans_cjk_14_minimal.c  lv_font_noto_sans_cjk_16_minimal.c
lvgl_frontend/scripts/: bamboo-controller.service.in  build.sh  test_touch.sh
lvgl_frontend/src/: main.cpp
lvgl_frontend/src/ai/: detection_processor.cpp  tensorrt_engine.cpp  yolo_detector.cpp
lvgl_frontend/src/app/: config_manager.cpp  event_manager.cpp  main_app.cpp
lvgl_frontend/src/backend/: backend_client.cpp  tcp_socket_client.cpp
lvgl_frontend/src/camera/: camera_manager.cpp  cuda_processor.cpp  gstreamer_receiver.cpp  shared_memory_reader.cpp  v4l2_camera.cpp
lvgl_frontend/src/display/: framebuffer_driver.cpp  gpu_accelerated.cpp  lvgl_display.cpp
lvgl_frontend/src/gui/: control_panel.cpp  settings_page.cpp  status_bar.cpp  video_view.cpp
lvgl_frontend/src/input/: input_calibration.cpp  touch_driver.cpp
lvgl_frontend/src/system/: lv_port_tick.c
qt_frontend/: CMakeLists.txt  README.md  jetson_optimization.md  run_bamboo_qt.sh
qt_frontend/include/: bamboodetector.h  cameramanager.h  configmanager.h  mainwindow.h  systemcontroller.h  touchcontroller.h  videorenderer.h
qt_frontend/qml/: main.qml
qt_frontend/qml/components/: ControlPanel.qml  SettingsDialog.qml  StatusBar.qml  VideoDisplay.qml
qt_frontend/resources/: resources.qrc
qt_frontend/resources/config/: default_config.json
qt_frontend/resources/shaders/: fragment.glsl  vertex.glsl  yuv_fragment.glsl
qt_frontend/src/: bamboodetector.cpp  cameramanager.cpp  configmanager.cpp  main.cpp  mainwindow.cpp  systemcontroller.cpp  touchcontroller.cpp  videorenderer.cpp
(+185 files in other folders)
